added a div for links

--- a/index.html
+++ b/index.html
@@ -16,10 +16,32 @@
     </div>
     <nav id="navbar">
       <a href="#project">Projects</a>
-      <a href="#about">About Us</a>
+      <a href="#about">About</a>
       <a href="#contact">Contact</a>
       <a href="https://github.com/alisasiljak/test-3-microvirse" target="_blank" id="profile-link">GitHub></a>
     </nav>
+
+  </div>
+  <div class="link" id="product">
+   <h2>Product</h2>
+   <img src="orange.jpg" alt="product" height="626px" width="626px">
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum vitae iusto aliquid quisquam modi expedita doloribus veritatis! Sunt, cumque nam perspiciatis aliquam quae iste nesciunt atque fugiat quis quidem! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint suscipit ea quos eos minima error, deserunt cum quidem similique. Iure molestiae voluptates maxime. Libero quasi saepe nisi. Facere, mollitia accusantium.</p>
+   </div>
+   <div class="link" id="about">
+     <h2>About Us</h2>
+     <img src="aboutus.jpeg" alt="" height="626px" width="626px">
+     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum vitae iusto aliquid quisquam modi expedita doloribus veritatis! Sunt, cumque nam perspiciatis aliquam quae iste nesciunt atque fugiat quis quidem! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint suscipit ea quos eos minima error, deserunt cum quidem similique. Iure molestiae voluptates maxime. Libero quasi saepe nisi. Facere, mollitia accusantium.</p>
+
+
+   </div>
+   <div class="link" id="contact">
+     <h2>Contact</h2>
+     <img src="contact.jpg" alt="">
+     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolorum vitae iusto aliquid quisquam modi expedita doloribus veritatis! Sunt, cumque nam perspiciatis aliquam quae iste nesciunt atque fugiat quis quidem! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint suscipit ea quos eos minima error, deserunt cum quidem similique. Iure molestiae voluptates maxime. Libero quasi saepe nisi. Facere, mollitia accusantium.</p>
+
+   </div>
+
+
 
   </section>
 </section>
