--- a/index.html
+++ b/index.html
@@ -4,26 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <title>Personal Portfolio</title>
 </head>
 <body>
 <section id="welcome-section">
-  <h1>My Website</h1>
+  <div id="betterwork">
+    <h1 class="welcome">My Website</h1>
+
+    <nav id="navbar">
+      
+      <a href="#about" class="ab">About</a>
+      <a href="#contact" class="con">Contact</a>
+      <a href="https://github.com/alisasiljak/test-3-microvirse" target="_blank" id="profile-link" class="git">GitHub></a>
+    </nav>
+
+  </div>
+</section>
   <section id="projects">
     <div class="project-tile">
       <a href="#project">Projects</a>
     </div>
-    <nav id="navbar">
-      
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-      <a href="https://github.com/alisasiljak/test-3-microvirse" target="_blank" id="profile-link">GitHub></a>
-    </nav>
+  </section>
 
-  </div>
+  
   <div id="image">
-    <img src="basic.jpg" alt="basic">
+    <img src="basic.jpg" alt="basic" width="2000px" height="1000px">
   </div>
  
    <div class="link" id="about">
@@ -42,7 +48,7 @@
 
 
 
-  </section>
-</section>
+  
+
 </body>
 </html>
