--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </section>
   <section id="projects">
     <div class="project-tile">
-      <a href="#project">Projects</a>
+      <a href="#project">Project</a>
     </div>
   </section>
 
