--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <title>Personal Portfolio</title>
 </head>
 <body>
-  
+<section id="welcome-section">
+  <h1>My Website</h1>
+  <section id="projects">
+    <div class="project-tile">
+      <a href="#">Project</a>
+    </div>
+    <nav id="navbar">
+      <a href="#project">Projects</a>
+      <a href="#about">About Us</a>
+      <a href="#contact">Contact</a>
+      <a href="https://github.com/alisasiljak/test-3-microvirse" target="_blank" id="profile-link">GitHub></a>
+    </nav>
+
+  </section>
+</section>
 </body>
 </html>
